--- a/. GitHub/Workflows/Deploy.yml
+++ b/. GitHub/Workflows/Deploy.yml
@@ -16,7 +16,7 @@
 <p align="center">
 
   <a aria-label="Join our chats" href="https://t.me/suhailBotInc" target="_blank">
-    <img alt="telegram" src="https://img.shields.io/badge/Join Group-25D366?style=for-the-badge&logo=telegram&logoColor=white" />
+    <img alt="telegam" src="https://img.shields.io/badge/Join Group-25D366?style=for-the-badge&logo=telegram&logoColor=white" />
   </a>
  
 
